.cloudbuild/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: poac-pm-cluster
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      name: poac-pm-cluster
  template:
    metadata:
      labels:
        name: poac-pm-cluster
        cluster_name: poac-pm-cluster
    spec:
      containers: # poac-pm-cluster-backend, poac-pm-cluster-frontend
      - name: poac-pm-cluster
        image: gcr.io/poac-pm/github-poacpm-poac-pm:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: goth-credentials
          mountPath: /tmp
      volumes:
      - name: goth-credentials
        secret:
          secretName: goth-credentials
