.cloudbuild/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: poac-pm-ip
spec:
  backend:
    serviceName: poac-pm-cluster
    servicePort: 8080
